# forge

./: .gitignore  PLAN.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
rust/: README.md
rust/forge-core/: Cargo.toml  README.md  pyproject.toml
rust/forge-core/src/: lib.rs
src/forgekernel/: __init__.py  brep.py  bsolid.py  csg.py  curve.py  exact.py  hlr.py  interval.py  io.py  kernel.py  loft.py  mesh2d.py  nurbs.py  profile2d.py  quadric.py  ssi.py  stepio.py  surd.py  surfacing.py  tess.py  trim.py
tests/: test_hlr.py  test_k1_exact.py  test_k37_loft.py  test_k38_profile.py  test_k3_curves.py  test_k3_ssi.py  test_k3_step.py  test_k6_surfacing.py  test_k7_bsolid.py  test_k7_stepexport.py  test_k7_trim.py  test_k7_trimflux.py  test_rotate.py  test_rust_oracle.py  test_scaffold.py
