[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forgekernel"
version = "0.0.1"
description = "gitcad-native B-rep kernel: exact-arithmetic reference implementation"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
