[package]
name = "forge-core"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "forgekernel_rs"
crate-type = ["cdylib"]

[dependencies]
num-rational = { version = "0.4", features = ["num-bigint"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
pyo3 = { version = "0.22", features = ["extension-module", "num-bigint"] }
