[package]
name = "forge-core"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
description = "Native (Rust) build of performance-critical routines for the forgekernel CAD kernel"
repository = "https://github.com/gitcad-xyz/forge"

[lib]
name = "forgekernel_rs"
crate-type = ["cdylib"]

[dependencies]
num-rational = { version = "0.4", features = ["num-bigint"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
# abi3-py311: one wheel per platform covers every CPython >= 3.11.
pyo3 = { version = "0.22", features = ["extension-module", "num-bigint", "abi3-py311"] }
